<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <TextView
        android:id="@+id/titleAcctCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/title_text_acct_create"
        android:textSize="30sp" />

    <ProgressBar
        android:id="@+id/create_acct_progress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/acct_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/username_account"
            android:hint="@string/username_hint"
            android:paddingBottom="10dp"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <AutoCompleteTextView
            android:id="@+id/email_account"
            android:hint="@string/email_hint"
            android:layout_marginTop="16dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/password_account"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



        <Button
            android:id="@+id/create_account_button"
            android:textColor="@color/teal_200"
            android:text="@string/create_text"
            android:background="@android:color/transparent"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</LinearLayout>